# app-stock-predictor

./: Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/azuraforge_stockapp/: caching.py  config_schema.py  form_schema.json  pipeline.py
src/azuraforge_stockapp/config/: stock_predictor_config.yml
tools/: run_isolated.py
