[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "azuraforge-app-stock-predictor"
version = "0.1.3" # Versiyonu artırıyoruz
description = "A stock prediction pipeline application for the AzuraForge platform."
requires-python = ">=3.8"
dependencies = [
    # === DEĞİŞİKLİK BURADA: learner'ın en son versiyonuna işaret ediyor ===
    "azuraforge-learner @ git+https://github.com/AzuraForge/learner.git@v0.1.5",
    "yfinance",
    "pandas",
    "scikit-learn",
    "PyYAML",
]

[project.entry-points]
"azuraforge.pipelines" = { stock_predictor = "azuraforge_stockapp.pipeline:StockPredictionPipeline" }
"azuraforge.configs" = { stock_predictor = "azuraforge_stockapp.pipeline:get_default_config" }