# app-stock-predictor/pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"] # 'wheel' eklendi
build-backend = "setuptools.build_meta"

[project]
name = "azuraforge-app-stock-predictor"
version = "0.1.3" # Bu versiyon otomatik artırılacak
description = "A stock prediction pipeline application for the AzuraForge platform."
requires-python = ">=3.8"
dependencies = [
    "azuraforge-learner @ git+https://github.com/AzuraForge/learner.git@v0.1.5", # learner'ın mevcut stabil versiyonuna işaret etmeli (burada v0.1.5)
    "yfinance",
    "pandas",
    "scikit-learn",
    "PyYAML",
    "python-semantic-release" # YENİ: Otomatik versiyonlama için eklendi
]

[project.entry-points]
"azuraforge.pipelines" = { stock_predictor = "azuraforge_stockapp.pipeline:StockPredictionPipeline" }
"azuraforge.configs" = { stock_predictor = "azuraforge_stockapp.pipeline:get_default_config" }

# YENİ: semantic-release yapılandırması
[tool.semantic_release]
branch = "main"
version_variable = "pyproject.toml:project.version"
upload_to_pypi = false
major_on_zero = false
changelog_file = "CHANGELOG.md"