# app-stock-predictor/pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azuraforge-app-stock-predictor"
version = "0.1.1"
description = "A stock prediction pipeline application for the AzuraForge platform."
requires-python = ">=3.10"
dependencies = [
    "azuraforge-learner @ git+https://github.com/AzuraForge/learner.git@main",
    "yfinance",
    "pandas",
    "scikit-learn",
    "PyYAML",
    "python-semantic-release"
]

[project.entry-points]
"azuraforge.pipelines" = { stock_predictor = "azuraforge_stockapp.pipeline:StockPredictionPipeline" }
"azuraforge.configs" = { stock_predictor = "azuraforge_stockapp.pipeline:get_default_config" }


[tool.semantic_release]
branch = "main"
version_variable = "pyproject.toml:project.version"
upload_to_pypi = false
major_on_zero = false
changelog_file = "CHANGELOG.md"